--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.25.0",
+    "@google-cloud/vertexai": "^1.4.0",
     "@google/generative-ai": "^0.15.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "google-auth": "^0.0.1",
+    "google-auth-library": "^9.11.0"
   },
   "type": "module"
 }
